# kumo

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
data/: memgraph.cdx.json
kumo_beam/: __init__.py  __main__.py  app.py
kumo_graph/: __main__.py  cyclonedx.py  node.py  purl.py  relation.py
kumo_server/: app.py
test/: test_kumo_beam.py
